<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="bank_palestine"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_bank_palestine"
        android:shortcutShortLabel="@string/shortcut_bank_palestine_short"
        android:shortcutLongLabel="@string/shortcut_bank_palestine_long"
        android:shortcutDisabledMessage="@string/shortcut_disabled">
        <intent
            android:action="com.palpay.ussdlauncher.ACTION_OPEN_PROVIDER"
            android:targetPackage="com.palpay.ussdlauncher"
            android:targetClass="com.palpay.ussdlauncher.MainActivity">
            <extra android:name="serviceKey" android:value="bank_palestine" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="jawwal_pay"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_jawwal_pay"
        android:shortcutShortLabel="@string/shortcut_jawwal_pay_short"
        android:shortcutLongLabel="@string/shortcut_jawwal_pay_long"
        android:shortcutDisabledMessage="@string/shortcut_disabled">
        <intent
            android:action="com.palpay.ussdlauncher.ACTION_OPEN_PROVIDER"
            android:targetPackage="com.palpay.ussdlauncher"
            android:targetClass="com.palpay.ussdlauncher.MainActivity">
            <extra android:name="serviceKey" android:value="jawwal_pay" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="pal_pay"
        android:enabled="false"
        android:icon="@drawable/ic_shortcut_pal_pay"
        android:shortcutShortLabel="@string/shortcut_pal_pay_short"
        android:shortcutLongLabel="@string/shortcut_pal_pay_long"
        android:shortcutDisabledMessage="@string/shortcut_disabled">
        <intent
            android:action="com.palpay.ussdlauncher.ACTION_OPEN_PROVIDER"
            android:targetPackage="com.palpay.ussdlauncher"
            android:targetClass="com.palpay.ussdlauncher.MainActivity">
            <extra android:name="serviceKey" android:value="pal_pay" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

</shortcuts>
